--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="js/html5.js"></script>
 	<![endif]-->
 </head>
-<body>
+<body class="ny">
 	<div class="wrapper">
 		<section class="topbar">
 			<div class="topbar-container">
@@ -274,6 +274,7 @@
 			</div>
 		</section>
 
+<section class="ny_cover">
 		<section class="offers line">
 			<a href="#" class="offer">
 				<span class="offer-title">Яндекс.Диск</span>
@@ -1012,6 +1013,7 @@
 				</div>
 			</div>
 		</section>
+</section>
 
 		<section class="line news">
 			<h3>Новости:</h3>
@@ -1085,6 +1087,14 @@
 				<div class="footer-copy">© 2015 ОАО «Ростелеком». Все права защищены.</div>
 			</div>
 		</footer>
+	</div>
+	<div class="ny_footer">
+		<div class="n_0"></div>
+		<section class="add_move">
+			<div class="n_1"></div>
+			<div class="n_2"></div>
+			<div class="n_3"></div>
+		</section>
 	</div>
 
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
