Правки адаптивной версии

--- a/add.html
+++ b/add.html
@@ -70,7 +70,7 @@
 					<div class="fill-background"></div>
 					
 					<div id="payment-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<h4>Оплатить</h4>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Номер лицевого счета">
@@ -95,7 +95,7 @@
 					</div>
 
 					<div id="login-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<h4>Личный кабинет</h4>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Логин">
