--- a/offices.html
+++ b/offices.html
@@ -58,7 +58,7 @@
 					<div class="fill-background"></div>
 					
 					<div id="payment-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<h4>Оплатить</h4>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Номер лицевого счета">
@@ -83,7 +83,7 @@
 					</div>
 
 					<div id="login-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<h4>Личный кабинет</h4>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Логин">
