--- a/channels.html
+++ b/channels.html
@@ -58,7 +58,7 @@
 					<div class="fill-background"></div>
 
 					<div id="payment-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Номер лицевого счета">
 						</div>
@@ -82,7 +82,7 @@
 					</div>
 
 					<div id="login-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Логин">
 						</div>
