--- a/gui.html
+++ b/gui.html
@@ -59,7 +59,7 @@
 					<div class="fill-background"></div>
 
 					<div id="payment-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Номер лицевого счета">
 						</div>
@@ -83,7 +83,7 @@
 					</div>
 
 					<div id="login-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Логин">
 						</div>
