--- a/internet.html
+++ b/internet.html
@@ -4,11 +4,13 @@
 	<title>Интернет</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=1">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.teslalign.js"></script>
 	<script src="js/jquery.circliful.min.js"></script>
 	<script src="js/jquery.formstyler.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/scripts.js"></script>
 	<!--[if lt IE 9]>
 	<link rel="stylesheet" href="css/ie.css">
@@ -60,7 +62,7 @@
 					<div class="fill-background"></div>
 					
 					<div id="payment-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Номер лицевого счета">
 						</div>
@@ -84,7 +86,7 @@
 					</div>
 
 					<div id="login-popup" class="popup">
-						<div class="popup-close"></div>
+						<div class="popup-close static"></div>
 						<div class="form-block">
 							<input type="text" class="form-text" placeholder="Логин">
 						</div>
@@ -260,6 +262,7 @@
 				<form method="post" action="#" class="clearfix">
 					<input type="text" class="form-text check-address-street" placeholder="Название улицы">
 					<input type="text" class="form-text check-address-home" placeholder="Дом">
+					<input type="text" name="entrance" class="form-text check-address-porch" placeholder="Подъезд" size="7">
 					<button type="submit" class="btn"><span>Проверить адрес</span></button>
 				</form>
 				<a href="javascript://" class="coating-close fake-link">Закрыть карту</a>
@@ -279,7 +282,7 @@
 						<div class="three">&nbsp;</div>
 						<div class="four">Стоимость</div>
 					</div>
-					<div class="tariff-line clearfix">
+					<div class="tariff-line clearfix tariff-line_radio">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">ОнЛайм 100</div>
@@ -298,14 +301,24 @@
 								</span>
 							</span>
 						</div>
-						<div class="tariff-bonus tariff-bonus__long clearfix">
+						<div class="tariff-bonus tariff-bonus__long">
 							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-yandex.png" width="25" height="17" alt="">
-								<span class="tip">Яндекс.Диск<br>Плюс 40 гигабайт</span>
-							</div>
-							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-kasper.png" width="17" height="16" alt="">
-								<span class="tip">Антивирус Касперского<br>2 месяца бесплатно</span>
+								<img src="http://www.onlime.ru/images/del/onlime_benefits_gif.gif" alt="" class="floating">
+								<b class="counter">3</b>
+								<span class="tip pullUp">
+									<p>
+										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
+										</span>
+									</p>
+									<p>
+										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
+										</span>
+									</p>
+								</span>
 							</div>
 						</div>
 						<div class="tariff-cost tariff-cost-phone">
@@ -320,6 +333,22 @@
 						</div>
 						<!-- Вывод для маленьких экранов -->
 						<div class="tariff-small">
+							<div class="tariff-small__gallery">
+								<div class="tariff-small__carousel">
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_05.png" alt="">
+										</div>
+										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
+									</div>
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_06.png" alt="">
+										</div>
+										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
+									</div>
+								</div>
+							</div>
 							<div class="tariff-small-line">
 								<div class="left">Скорость</div>
 								<div class="right">
@@ -345,6 +374,9 @@
 									<span class="tariff-cost-hint">С 3 месяца 995 руб./мес.</span>
 								</div>
 							</div>
+							<a href="#" class="tariff-gift">
+								<span class="tariff-gift__badge">2</span>
+							</a>
 						</div>
 						<!-- Конец вывода для маленьких экранов -->
 						<div class="tariff-radio">
@@ -357,7 +389,7 @@
 						</div>
 					</div>
 
-					<div class="tariff-line clearfix">
+					<div class="tariff-line clearfix tariff-line_radio">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">ОнЛайм 60</div>
@@ -378,12 +410,22 @@
 						</div>
 						<div class="tariff-bonus tariff-bonus__long">
 							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-yandex.png" width="25" height="17" alt="">
-								<span class="tip">Яндекс.Диск<br>Плюс 40 гигабайт</span>
-							</div>
-							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-kasper.png" width="17" height="16" alt="">
-								<span class="tip">Антивирус Касперского<br>2 месяца бесплатно</span>
+								<img src="http://www.onlime.ru/images/del/onlime_benefits_gif.gif" alt="" class="floating">
+								<b class="counter">3</b>
+								<span class="tip pullUp">
+									<p>
+										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
+										</span>
+									</p>
+									<p>
+										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
+										</span>
+									</p>
+								</span>
 							</div>
 						</div>
 						<div class="tariff-cost tariff-cost-phone">
@@ -398,6 +440,22 @@
 						</div>
 						<!-- Вывод для маленьких экранов -->
 						<div class="tariff-small">
+							<div class="tariff-small__gallery">
+								<div class="tariff-small__carousel">
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_05.png" alt="">
+										</div>
+										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
+									</div>
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_06.png" alt="">
+										</div>
+										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
+									</div>
+								</div>
+							</div>
 							<div class="tariff-small-line">
 								<div class="left">Скорость</div>
 								<div class="right">
@@ -423,6 +481,9 @@
 									<span class="tariff-cost-hint">С 3 месяца 995 руб./мес.</span>
 								</div>
 							</div>
+							<a href="#" class="tariff-gift">
+								<span class="tariff-gift__badge">2</span>
+							</a>
 						</div>
 						<!-- Конец вывода для маленьких экранов -->
 						<div class="tariff-radio">
@@ -435,7 +496,7 @@
 						</div>
 					</div>
 
-					<div class="tariff-line clearfix">
+					<div class="tariff-line clearfix tariff-line_radio">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">Он Лайм 30</div>
@@ -456,12 +517,22 @@
 						</div>
 						<div class="tariff-bonus tariff-bonus__long">
 							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-yandex.png" width="25" height="17" alt="">
-								<span class="tip">Яндекс.Диск<br>Плюс 40 гигабайт</span>
-							</div>
-							<div class="bonus-ico toltip">
-								<img src="images/del/bonus-ico-kasper.png" width="17" height="16" alt="">
-								<span class="tip">Антивирус Касперского<br>2 месяца бесплатно</span>
+								<img src="http://www.onlime.ru/images/del/onlime_benefits_gif.gif" alt="" class="floating">
+								<b class="counter">3</b>
+								<span class="tip pullUp">
+									<p>
+										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
+										</span>
+									</p>
+									<p>
+										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<span>
+											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
+										</span>
+									</p>
+								</span>
 							</div>
 						</div>
 						<div class="tariff-cost tariff-cost-phone">
@@ -476,6 +547,22 @@
 						</div>
 						<!-- Вывод для маленьких экранов -->
 						<div class="tariff-small">
+							<div class="tariff-small__gallery">
+								<div class="tariff-small__carousel">
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_05.png" alt="">
+										</div>
+										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
+									</div>
+									<div class="tariff-small__slide">
+										<div class="tariff-small__slide-icon">
+											<img src="/images/onlime_benefit_06.png" alt="">
+										</div>
+										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
+									</div>
+								</div>
+							</div>
 							<div class="tariff-small-line">
 								<div class="left">Скорость</div>
 								<div class="right">
@@ -501,6 +588,9 @@
 									<span class="tariff-cost-hint">С 3 месяца 995 руб./мес.</span>
 								</div>
 							</div>
+							<a href="#" class="tariff-gift">
+								<span class="tariff-gift__badge">2</span>
+							</a>
 						</div>
 						<!-- Конец вывода для маленьких экранов -->
 						<div class="tariff-radio">
@@ -726,27 +816,15 @@
 				<section class="tariff-total">
 					<h3>Итого:</h3>
 
-					<!-- Итого для смартфонов -->
 					<div class="tariff-total-small">
 						<div class="tariff-small">
 							<div class="tariff-small-line strong">
-								<div class="left">Разовый платеж</div>
+								<div class="left">
+									<div class="tariff-small-label">Разовый платеж</div>
+								</div>
 								<div class="right">
 									<span class="tariff-numbers">
 										<span class="num">4 690</span>
-										<span class="unit">
-											<span class="unit-top">руб.</span>
-										</span>
-									</span>
-								</div>
-							</div>
-						</div>
-						<div class="tariff-small">
-							<div class="tariff-small-line strong">
-								<div class="left">Ежемесячный платеж</div>
-								<div class="right">
-									<span class="tariff-numbers">
-										<span class="num">898</span>
 										<span class="unit">
 											<span class="unit-top">руб.</span>
 											<span class="unit-bottom">мес.</span>
@@ -757,28 +835,44 @@
 						</div>
 						<div class="tariff-small">
 							<div class="tariff-small-line strong">
-								<div class="left">Стоимость</div>
+								<div class="left">
+									<div class="tariff-small-label">Ежемесячный платеж</div>
+								</div>
+								<div class="right">
+									<span class="tariff-numbers">
+										<span class="num">900</span>
+										<span class="unit">
+											<span class="unit-top">руб.</span>
+											<span class="unit-bottom">мес.</span>
+										</span>
+									</span>
+								</div>
+							</div>
+						</div>
+						<div class="tariff-small">
+							<div class="tariff-small-line strong">
+								<div class="left">
+									<div class="tariff-small-label">стоимость</div>
+								</div>
 								<div class="right">
 									<span class="tariff-numbers">
 										<span class="num">5 590</span>
 										<span class="unit">
 											<span class="unit-top">руб.</span>
+											<span class="unit-bottom">мес.</span>
 										</span>
 									</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<!-- Конец итого для смартфонов -->
 
 					<a href="#" class="btn"><span>Продолжить</span></a>
-					
-					<!-- Ссылки для смартфонов -->
+
 					<div class="total-small-links">
 						<a href="#" class="fake-link works-list-link">Перечень работ</a>
 						<a href="#" class="fake-link extract-link">Подробная выписка</a>
 					</div>
-					<!-- Конец ссылок для смартфонов -->
 
 					<div class="tariff-total-container clearfix">
 						<div class="tariff-total-item first">
