Правки адаптивной версии

--- a/index.html
+++ b/index.html
@@ -557,13 +557,13 @@
 								<b class="counter">3</b>
 								<span class="tip pullUp">
 									<p>
-										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
 										</span>
 									</p>
 									<p>
-										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
 										</span>
@@ -586,13 +586,13 @@
 								<div class="tariff-small__carousel">
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_05.png" alt="">
+											<img src="./images/onlime_benefit_05.png" alt="">
 										</div>
 										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
 									</div>
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_06.png" alt="">
+											<img src="./images/onlime_benefit_06.png" alt="">
 										</div>
 										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
 									</div>
