--- a/internet.html
+++ b/internet.html
@@ -307,13 +307,13 @@
 								<b class="counter">3</b>
 								<span class="tip pullUp">
 									<p>
-										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
 										</span>
 									</p>
 									<p>
-										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
 										</span>
@@ -337,13 +337,13 @@
 								<div class="tariff-small__carousel">
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_05.png" alt="">
+											<img src="./images/onlime_benefit_05.png" alt="">
 										</div>
 										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
 									</div>
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_06.png" alt="">
+											<img src="./images/onlime_benefit_06.png" alt="">
 										</div>
 										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
 									</div>
@@ -414,13 +414,13 @@
 								<b class="counter">3</b>
 								<span class="tip pullUp">
 									<p>
-										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
 										</span>
 									</p>
 									<p>
-										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
 										</span>
@@ -444,13 +444,13 @@
 								<div class="tariff-small__carousel">
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_05.png" alt="">
+											<img src="./images/onlime_benefit_05.png" alt="">
 										</div>
 										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
 									</div>
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_06.png" alt="">
+											<img src="./images/onlime_benefit_06.png" alt="">
 										</div>
 										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
 									</div>
@@ -521,13 +521,13 @@
 								<b class="counter">3</b>
 								<span class="tip pullUp">
 									<p>
-										<img src="/images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_05.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/41/" target="_blank" style="color:white">Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</a>
 										</span>
 									</p>
 									<p>
-										<img src="/images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
+										<img src="./images/onlime_benefit_06.png" class="tossing" width="25" height="25" alt="">
 										<span>
 											<a href="/tv/actions/48/" target="_blank" style="color:white">«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</a>
 										</span>
@@ -551,13 +551,13 @@
 								<div class="tariff-small__carousel">
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_05.png" alt="">
+											<img src="./images/onlime_benefit_05.png" alt="">
 										</div>
 										<p>Услуга «Управление просмотром» на 2 месяца совершенно бесплатно.</p>
 									</div>
 									<div class="tariff-small__slide">
 										<div class="tariff-small__slide-icon">
-											<img src="/images/onlime_benefit_06.png" alt="">
+											<img src="./images/onlime_benefit_06.png" alt="">
 										</div>
 										<p>«Amedia Premium» или «Наш футбол» 2 месяца совершенно бесплатно</p>
 									</div>
